cedar-lean/UnitTest/parser_tests/negative/invalid_annotation_placement.cedar
permit(principal, action, resource) @id("test");
